--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -6,7 +6,7 @@
   <br></br>
   <label>Password: </label><input type="password" name="user[password]">
   <br></br>
-  <input type="submit" value="submit">
+  <input type="submit" value="Signup">
 </form>
 
 <p>Or <a href="/login">Log In</a> if you already have an account.</p>
