--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,10 +1,10 @@
 <h1>Sign Up For RemindMeTea</h1>
 <form action="/signup" method="POST">
-  <label>Username: </label><input type="text" name="user[username]">
+  <label>Username: </label><input type="text" name="username">
   <br></br>
-  <label>Email: </label><input type="email" name="user[email]">
+  <label>Email: </label><input type="email" name="email">
   <br></br>
-  <label>Password: </label><input type="password" name="user[password]">
+  <label>Password: </label><input type="password" name="password">
   <br></br>
   <input type="submit" value="Signup">
 </form>
