Updating bbts and user

--- a/app/views/bbts/index.erb
+++ b/app/views/bbts/index.erb
@@ -4,9 +4,9 @@
   <h3><a href="/users/<%=bbt.user%>"></a> </h3>
   <p><%= bbt.name %></p>
   <p><%= bbt.brand %></p>
-  <a href="/bbts/<%=bbt.id%>">View this bubbletea</a>
+  <a href="/bbts/<%=bbt.id%>">View This Bubbletea</a>
   <br></br>
 <% end %>
   <br></br>
-  <a href="/bbts/new">New bubbletea</a>
+  <a href="/bbts/new">New Bubbletea</a>
   <a href="/logout">Log Out</a>
