added bubble/boba attirbute and updated bbt form

--- a/app/views/bbts/new.erb
+++ b/app/views/bbts/new.erb
@@ -3,6 +3,8 @@
   <form action='/bbts' method="POST">
     Bubbletea Name:
     <input type="text" name="name"><br>
+    Does It Have Bubbles?:
+    <input type="text" name="bubble"><br>
     Brand:
     <input type="text" name="brand"><br>
     Sugar Amount:
