Added logouts on certain pages

--- a/app/views/bbts/edit.erb
+++ b/app/views/bbts/edit.erb
@@ -13,3 +13,4 @@
   <input type="text" name="temp" value="<%=@bbt.temp%>"><br>
   <input type="submit" value="Edit">
 </form>
+<a href="/logout">Log Out</a>
