--- a/app/views/bbts/new.erb
+++ b/app/views/bbts/new.erb
@@ -15,7 +15,7 @@
     <input type="text" name="temp"><br>
     <input type="submit" name="Create">
   </form>
-
+  <a href="/logout">Log Out</a>
 <% else %>
     <h1> You Must Be Logged To Make Your List. </h1>
 <% end %>
