Improved menu options in bbt new and edit files

--- a/app/views/bbts/new.erb
+++ b/app/views/bbts/new.erb
@@ -4,15 +4,31 @@
     Bubbletea Name:
     <input type="text" name="name"><br>
     Does It Have Bubbles?:
-    <input type="text" name="bubble"><br>
+    <select name="bubble">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+    </select><br>
     Brand:
     <input type="text" name="brand"><br>
     Sugar Amount:
-    <input type="text" name="sugar_amount"><br>
+    <select name="sugar_amount">
+        <option value="None">None</option>
+        <option value="Less">Less</option>
+        <option value="Regular">Regular</option>
+        <option value="More">More</option>
+    </select><br>
     Size:
-    <input type="text" name="size"><br>
+    <select name="size">
+        <option value="Small">Small</option>
+        <option value="Medium">Medium</option>
+        <option value="Large">Large</option>
+        <option value="Extra Large">Extra Large</option>
+    </select><br>
     Hot or Cold:
-    <input type="text" name="temp"><br>
+    <select name="temp">
+        <option value="Hot">Hot</option>
+        <option value="Cold">Cold</option>
+    </select><br>
     <input type="submit" name="Create">
   </form>
   <a href="/logout">Log Out</a>
