--- a/app/views/bbts/edit.erb
+++ b/app/views/bbts/edit.erb
@@ -2,15 +2,31 @@
 <form method="POST" action="/bbts/<%=@bbt.id%>">
   <input type="hidden" name="_method" id="hidden" value="patch">
   Bubbles:
-  <input type="text" name="bubble" value="<%=@bbt.bubble%>"><br>
+  <select name="bubble">
+      <option value="Yes">Yes</option>
+      <option value="No">No</option>
+  </select><br>
   Brand:
   <input type="text" name="brand" value="<%=@bbt.brand%>"><br>
   Sugar Amount:
-  <input type="text" name="sugar_amount" value="<%=@bbt.sugar_amount%>"><br>
+  <select name="sugar_amount">
+      <option value="None">None</option>
+      <option value="Less">Less</option>
+      <option value="Regular">Regular</option>
+      <option value="More">More</option>
+  </select><br>
   Size:
-  <input type="text" name="size" value="<%=@bbt.size%>"><br>
+  <select name="size">
+      <option value="Small">Small</option>
+      <option value="Medium">Medium</option>
+      <option value="Large">Large</option>
+      <option value="Extra Large">Extra Large</option>
+  </select><br>
   Hot or Cold:
-  <input type="text" name="temp" value="<%=@bbt.temp%>"><br>
+  <select name="temp">
+      <option value="Hot">Hot</option>
+      <option value="Cold">Cold</option>
+  </select><br>
   <input type="submit" value="Edit">
 </form>
 <a href="/logout">Log Out</a>
