--- a/app/views/bbts/show.erb
+++ b/app/views/bbts/show.erb
@@ -7,9 +7,9 @@
   Hot or Cold: <%= @bbt.temp%></p>
 <a href="/bbts">Back</a><br>
 <% if @bbt.user == current_user %>
-  <a href="/bbts/<%=@bbt.id%>/edit">Edit Bubbletea</a>
-  <form method="post" action="/bbts/<%=@bbt.id%>/delete">
-    <input type="submit" value="Delete Bubbletea">
-  </form>
+  <a href="/bbts/<%=@bbt.id%>/edit">Edit Bubbletea</a><br>
+  <form method="POST" action="/bbts/<%= @bbt.id %>">
+    <input type="hidden" name="_method" id="hidden" value="DELETE">
+    <input type="submit" value="DELETE">
+    </form>
 <% end %>
-  <a href="/"
