--- a/app/views/bbts/show.erb
+++ b/app/views/bbts/show.erb
@@ -1,15 +1,15 @@
 <h2><%= @bbt.user.username %></h2>
-<p>Name: <%= @bbt.name%>:<br>
+<p>Name: <%= @bbt.name%><br>
   Bubbles: <%= @bbt.bubble%><br>
   Brand: <%= @bbt.brand%><br>
   Sugar Amount:<%= @bbt.sugar_amount%><br>
   Size: <%= @bbt.size%><br>
   Hot or Cold: <%= @bbt.temp%></p>
-<a href="/bbts">Back</a><br>
+<a href="/bbts">Back To Homepage</a><br>
 <% if @bbt.user == current_user %>
   <a href="/bbts/<%=@bbt.id%>/edit">Edit Bubbletea</a><br>
   <form method="POST" action="/bbts/<%= @bbt.id %>">
     <input type="hidden" name="_method" id="hidden" value="DELETE">
-    <input type="submit" value="DELETE">
-    </form>
+    <input type="submit" value="Delete Bubbletea">
+  </form>
 <% end %>
