Delete unused code in index and fixing presentation of show.erb

--- a/app/views/bbts/show.erb
+++ b/app/views/bbts/show.erb
@@ -1,8 +1,8 @@
 <h2><%= @bbt.user.username %></h2>
 <p>Name: <%= @bbt.name%><br>
-  Bubbles: <%= @bbt.bubble%><br>
+  Does It Have Bubbles? <%= @bbt.bubble%><br>
   Brand: <%= @bbt.brand%><br>
-  Sugar Amount:<%= @bbt.sugar_amount%><br>
+  Sugar Amount: <%= @bbt.sugar_amount%><br>
   Size: <%= @bbt.size%><br>
   Hot or Cold: <%= @bbt.temp%></p>
 <a href="/bbts">Back To Homepage</a><br>
