--- a/app/views/bbts/new.erb
+++ b/app/views/bbts/new.erb
@@ -1,36 +1,37 @@
-<% if logged_in? %>
-  <form action='/bbts' method="POST">
-    Bubbletea Name:
-    <input type="text" name="name"><br>
-    Does It Have Bubbles?:
-    <select name="bubble">
-        <option value="Yes">Yes</option>
-        <option value="No">No</option>
-    </select><br>
-    Brand:
-    <input type="text" name="brand"><br>
-    Sugar Amount:
-    <select name="sugar_amount">
-        <option value="None">None</option>
-        <option value="Less">Less</option>
-        <option value="Regular">Regular</option>
-        <option value="More">More</option>
-    </select><br>
-    Size:
-    <select name="size">
-        <option value="Small">Small</option>
-        <option value="Medium">Medium</option>
-        <option value="Large">Large</option>
-        <option value="Extra Large">Extra Large</option>
-    </select><br>
-    Hot or Cold:
-    <select name="temp">
-        <option value="Hot">Hot</option>
-        <option value="Cold">Cold</option>
-    </select><br>
-    <input type="submit" name="Create">
-  </form>
-  <a href="/logout">Log Out</a>
-<% else %>
-    <h1> You Must Be Logged To Make Your List. </h1>
-<% end %>
+
+  <% if logged_in? %>
+    <form action='/bbts' method="POST">
+      Bubbletea Name:
+      <input type="text" name="name"><br>
+      Does It Have Bubbles?:
+      <select name="bubble">
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+      </select><br>
+      Brand:
+      <input type="text" name="brand"><br>
+      Sugar Amount:
+      <select name="sugar_amount">
+          <option value="None">None</option>
+          <option value="Less">Less</option>
+          <option value="Regular">Regular</option>
+          <option value="More">More</option>
+      </select><br>
+      Size:
+      <select name="size">
+          <option value="Small">Small</option>
+          <option value="Medium">Medium</option>
+          <option value="Large">Large</option>
+          <option value="Extra Large">Extra Large</option>
+      </select><br>
+      Hot or Cold:
+      <select name="temp">
+          <option value="Hot">Hot</option>
+          <option value="Cold">Cold</option>
+      </select><br>
+      <input type="submit" name="Create">
+    </form>
+    <a href="/logout"><Button>Log Out</Button></a>
+  <% else %>
+      <h1> You Must Be Logged To Make Your List. </h1>
+  <% end %>
