Added more buttons and got rid of unused files

--- a/app/views/bbts/index.erb
+++ b/app/views/bbts/index.erb
@@ -4,5 +4,5 @@
   <p><a href="/bbts/<%=bbt.id%>"><%= bbt.name %></a></p>
 <% end %>
   <br></br>
-  <a href="/bbts/new">New Bubbletea</a>
-  <a href="/logout">Log Out</a>
+  <a href="/bbts/new"><Button>New Bubbletea</Button></a>
+  <a href="/logout"><Button>Log Out</Button></a>
